--- a/form-ventas.html
+++ b/form-ventas.html
@@ -108,11 +108,10 @@
                     </tr>
                 </tbody>
             </table>
-
-            <div class="d-flex justify-content-end align-items-center mt-3">
+            <div class="d-flex justify-content-between align-items-center mt-3">
+                <button class="btn btn-secondary" onclick="window.location.href='listar-ventas.html'">Atrás</button>
                 <button class="btn btn-success">Guardar</button>
-            </div>            
-
+            </div>      
         </form>
     </div>
 
