--- a/listar-ventas.html
+++ b/listar-ventas.html
@@ -1,105 +1,102 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pedidos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="styles.css"> 
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Pedidos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="p-4">
 <div class="container p-0">
-    <div class="container p-0"> 
+    <div class="container p-0">
         <div class="container p-0 d-flex justify-content-between align-items-center mb-3">
-          <h3 class="titulo-ventas text-white m-0">Ventas</h3>
-          <button class="btn btn-registro" onclick="window.location.href='form-ventas.html'">Nuevo Registro</button>
+            <h3 class="titulo-ventas text-white m-0">Ventas</h3>
+            <button class="btn btn-registro" onclick="window.location.href='form-ventas.html'">Nuevo Registro</button>
         </div>
-    </div>      
-      
-  <table class="table table-bordered table-striped table-hover bg-white text-dark align-middle">
-    <thead class="table-secondary">
-      <tr>
-        <th>ID PEDIDO</th>
-        <th>NOMBRE CLIENTE</th>
-        <th>TOTAL</th>
-        <th>FECHA</th>
-        <th>ACCIÓN</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>1001</td>
-        <td>Juan Pérez</td>
-        <td>150000</td>
-        <td>01-06-2025</td>
-        <td>
-            <i class="fa-solid fa-trash" title="Eliminar" onclick="eliminarPedido(1001)" style="cursor:pointer; color: #dc3545;"></i>
-            <i class="fa-solid fa-pen-to-square" title="Editar" onclick="editarPedido(1001)" style="cursor:pointer; color: #0d6efd;"></i>
-            <i class="fa-solid fa-eye" title="Ver" onclick="verPedido(1001)" style="cursor:pointer; color: #198754;"></i>
-          </td>          
-      </tr>
-      <tr>
-        <td>1002</td>
-        <td>María López</td>
-        <td>220000</td>
-        <td>02-06-2025</td>
-        <td>
-            <i class="fa-solid fa-trash" title="Eliminar" onclick="eliminarPedido(1001)" style="cursor:pointer; color: #dc3545;"></i>
-            <i class="fa-solid fa-pen-to-square" title="Editar" onclick="editarPedido(1001)" style="cursor:pointer; color: #0d6efd;"></i>
-            <i class="fa-solid fa-eye" title="Ver" onclick="verPedido(1001)" style="cursor:pointer; color: #198754;"></i>
-          </td>          
-      </tr>
-      <tr>
-        <td>1003</td>
-        <td>Carlos García</td>
-        <td>180000</td>
-        <td>03-06-2025</td>
-        <td>
-            <i class="fa-solid fa-trash" title="Eliminar" onclick="eliminarPedido(1001)" style="cursor:pointer; color: #dc3545;"></i>
-            <i class="fa-solid fa-pen-to-square" title="Editar" onclick="editarPedido(1001)" style="cursor:pointer; color: #0d6efd;"></i>
-            <i class="fa-solid fa-eye" title="Ver" onclick="verPedido(1001)" style="cursor:pointer; color: #198754;"></i>
-          </td>          
-      </tr>
-      <tr>
-        <td>1004</td>
-        <td>Ana Martínez</td>
-        <td>200000</td>
-        <td>04-06-2025</td>
-        <td>
-            <i class="fa-solid fa-trash" title="Eliminar" onclick="eliminarPedido(1001)" style="cursor:pointer; color: #dc3545;"></i>
-            <i class="fa-solid fa-pen-to-square" title="Editar" onclick="editarPedido(1001)" style="cursor:pointer; color: #0d6efd;"></i>
-            <i class="fa-solid fa-eye" title="Ver" onclick="verPedido(1001)" style="cursor:pointer; color: #198754;"></i>
-          </td>          
-      </tr>
-      <tr>
-        <td>1005</td>
-        <td>Lucía Fernández</td>
-        <td>250000</td>
-        <td>05-06-2025</td>
-        <td>
-            <i class="fa-solid fa-trash" title="Eliminar" onclick="eliminarPedido(1001)" style="cursor:pointer; color: #dc3545;"></i>
-            <i class="fa-solid fa-pen-to-square" title="Editar" onclick="editarPedido(1001)" style="cursor:pointer; color: #0d6efd;"></i>
-            <i class="fa-solid fa-eye" title="Ver" onclick="verPedido(1001)" style="cursor:pointer; color: #198754;"></i>
-          </td>          
-      </tr>
-    </tbody>
-  </table>
+    </div>
+
+    <table class="table table-bordered table-striped table-hover bg-white text-dark align-middle">
+        <thead class="table-secondary">
+        <tr>
+            <th>ID PEDIDO</th>
+            <th>NOMBRE CLIENTE</th>
+            <th>TOTAL</th>
+            <th>FECHA</th>
+            <th>ACCIÓN</th>
+        </tr>
+        </thead>
+        <tbody id="tabla-ventas">
+        </tbody>
+    </table>
 </div>
 
 <script>
-  function eliminarPedido(id) {
-    // Función vacía para eliminar pedido
-    console.log("Eliminar pedido", id);
-  }
-  function editarPedido(id) {
-    // Función vacía para editar pedido
-    console.log("Editar pedido", id);
-  }
-  function verPedido(id) {
-  window.location.href = 'venta-detail.html';
-  }
+    async function cargarVentas() {
+        try {
+            const response = await fetch('http://localhost:8080/backend-inge3/sale', {
+                method: 'GET',
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+            if (!response.ok) throw new Error('Error al obtener ventas');
 
+            const ventas = await response.json();
+            const tbody = document.getElementById("tabla-ventas");
+            tbody.innerHTML = "";
+
+            ventas.forEach(venta => {
+                const fila = document.createElement("tr");
+                fila.innerHTML = `
+            <td>${venta.sale_id}</td>
+            <td>${venta.customer.name}</td>
+            <td>${venta.total_amount}</td>
+            <td>${formatearFecha(venta.sale_date)}</td>
+            <td>
+              <i class="fa-solid fa-trash" title="Eliminar" onclick="eliminarPedido(${venta.sale_id})" style="cursor:pointer; color: #dc3545;"></i>
+              <i class="fa-solid fa-pen-to-square" title="Editar" onclick="editarPedido(${venta.sale_id})" style="cursor:pointer; color: #0d6efd;"></i>
+              <i class="fa-solid fa-eye" title="Ver" onclick="verPedido(${venta.sale_id})" style="cursor:pointer; color: #198754;"></i>
+            </td>
+          `;
+                tbody.appendChild(fila);
+            });
+        } catch (err) {
+            console.error("Error al cargar ventas:", err);
+            alert("Error al cargar las ventas");
+        }
+    }
+
+    function formatearFecha(fechaISO) {
+        const fecha = new Date(fechaISO);
+        return fecha.toLocaleDateString("es-ES");
+    }
+
+    async function eliminarPedido(id) {
+        if (!confirm(`¿Seguro que deseas eliminar la venta ${id}?`)) return;
+        try {
+            const res = await fetch(`http://localhost:8080/backend-inge3/sale/${id}`, {
+                method: "DELETE"
+            });
+            if (!res.ok) throw new Error('No se pudo eliminar la venta');
+            alert("Venta eliminada correctamente");
+            cargarVentas();
+        } catch (err) {
+            console.error("Error al eliminar:", err);
+            alert("Error al eliminar venta");
+        }
+    }
+
+    function editarPedido(id) {
+        window.location.href = `form-ventas.html?id=${id}`;
+    }
+
+    function verPedido(id) {
+        window.location.href = `venta-detail.html?id=${id}`;
+    }
+
+    window.onload = cargarVentas;
 </script>
 </body>
 </html>
