se ajusta boton de retroceso

--- a/form-ventas.html
+++ b/form-ventas.html
@@ -14,14 +14,14 @@
 <body class="p-4">
 <div class="container">
     <h3 class="text-center text-white mb-4">Formulario de Venta</h3>
-
     <!-- Formulario -->
     <form id="formCliente">
         <div class="row mb-3">
             <!-- Cliente -->
             <div class="col-md-6 bg-warning text-dark p-3">
                 <div class="mb-2 d-flex align-items-center">
-                    <label for="clienteExistente" class="form-label me-2" style="width: 100px;">Buscar Cliente:</label>
+                    <label for="clienteExistente" class="form-label me-2" style="width: 100px;">Buscar
+                        Cliente:</label>
                     <select id="clienteExistente" class="form-select" style="flex: 1;">
                         <option value="">-- Nuevo Cliente --</option>
                     </select>
@@ -108,7 +108,9 @@
 
         <div class="d-flex justify-content-between align-items-center mb-3">
             <div class="justify-content-between">
-                <button class="btn btn-secondary" onclick="window.location.href='listar-ventas.html'">Atrás</button>
+                <button class="btn btn-secondary" type="button" onclick="window.location.href='listar-ventas.html'">
+                    Atrás
+                </button>
             </div>
             <div class="justify-content-between">
                 <button class="btn btn-success" type="submit">Guardar</button>
