llevar a js externos

--- a/form-ventas.html
+++ b/form-ventas.html
@@ -118,410 +118,6 @@
         </div>
     </form>
 </div>
-
-<script>
-
-    let listaProductos = [];
-
-    async function cargarProductos() {
-        const res = await fetch("http://localhost:8080/backend-inge3/product");
-        listaProductos = await res.json();
-        actualizarSelects();
-    }
-
-    function actualizarSelects() {
-        const selects = document.querySelectorAll(".producto-selector");
-
-        selects.forEach(select => {
-            const $select = $(select);
-
-            // Guardamos el valor seleccionado actual antes de resetearlo
-            const valorSeleccionado = $select.val();
-
-            $select.off("change").empty().append('<option value="">Seleccione Producto</option>');
-
-            listaProductos.forEach(p => {
-                const option = new Option(p.name, p.product_id, false, false);
-                option.setAttribute("data-precio", p.price);
-                $select.append(option);
-            });
-
-            $select.select2({width: '100%'});
-
-            if (valorSeleccionado) {
-                $select.val(valorSeleccionado).trigger('change');
-            }
-
-            $select.on("change", function () {
-                const selectedOption = this.selectedOptions[0];
-                const precio = selectedOption?.getAttribute("data-precio") || 0;
-                const fila = this.closest("tr");
-                fila.querySelector(".precio").value = precio;
-                calcularTotalFila(fila);
-            });
-        });
-    }
-
-
-    function calcularTotalFila(fila) {
-        const cantidad = parseFloat(fila.querySelector(".cantidad").value) || 0;
-        const precio = parseFloat(fila.querySelector(".precio").value) || 0;
-        const subtotal = cantidad * precio;
-        const totalInput = fila.querySelector(".total");
-
-        totalInput.dataset.raw = subtotal.toFixed(2);
-        totalInput.value = subtotal.toLocaleString("es-ES");
-
-        calcularTotalGeneral();
-    }
-
-    function calcularTotalGeneral() {
-        let total = 0;
-        document.querySelectorAll("#tablaProductos tbody tr").forEach(fila => {
-            const subtotal = parseFloat(fila.querySelector(".total").dataset.raw) || 0;
-            total += subtotal;
-        });
-        document.getElementById("totalGeneral").textContent = total.toLocaleString("es-ES");
-    }
-
-    function toggleOpcionesCredito() {
-        const esCredito = document.getElementById("credito").checked;
-        document.getElementById("opcionesCredito").classList.toggle("d-none", !esCredito);
-
-        if (!esCredito) {
-            document.getElementById("esIrregular").checked = false;
-            document.getElementById("diasInputs").innerHTML = "";
-        }
-    }
-
-
-    function generarCamposDias(cantidad) {
-        const contenedor = document.getElementById("diasInputs");
-        contenedor.innerHTML = "";
-
-        for (let i = 1; i <= cantidad; i++) {
-            const div = document.createElement("div");
-            div.className = "mb-1 d-flex align-items-center";
-
-            const label = document.createElement("label");
-            label.className = "form-label me-2";
-            label.style.width = "160px";
-            label.textContent = `Día de Cobro Cuota ${i}:`;
-
-            const input = document.createElement("input");
-            input.type = "number";
-            input.className = "form-control dias-cobro";
-            input.placeholder = "Ej: 30";
-            input.min = "1";
-            input.required = true;
-            input.style.flex = "1";
-
-            div.appendChild(label);
-            div.appendChild(input);
-
-            contenedor.appendChild(div);
-        }
-    }
-
-    let listaClientes = [];
-
-    async function cargarClientes() {
-        const res = await fetch("http://localhost:8080/backend-inge3/customer");
-        listaClientes = await res.json();
-
-        const $select = $("#clienteExistente");
-        $select.empty().append('<option value="">-- Nuevo Cliente --</option>');
-
-        listaClientes.forEach(c => {
-            const option = new Option(`${c.name} - ${c.ci_ruc}`, c.customer_id, false, false);
-            option.dataset.name = c.name;
-            option.dataset.email = c.email;
-            option.dataset.phone = c.phone;
-            option.dataset.ruc = c.ci_ruc;
-            $select.append(option);
-        });
-
-        $select.select2({width: '100%'});
-
-        $select.on("change", function () {
-            const selectedOption = this.selectedOptions[0];
-
-            if (this.value) {
-                document.getElementById("nombre").value = selectedOption.dataset.name;
-                document.getElementById("email").value = selectedOption.dataset.email;
-                document.getElementById("telefono").value = selectedOption.dataset.phone;
-                document.getElementById("ruc").value = selectedOption.dataset.ruc;
-
-                // Opcionalmente puedes bloquear los campos si el cliente es existente
-                document.getElementById("nombre").readOnly = true;
-                document.getElementById("email").readOnly = true;
-                document.getElementById("telefono").readOnly = true;
-                document.getElementById("ruc").readOnly = true;
-            } else {
-                // Si se selecciona "-- Nuevo Cliente --"
-                document.getElementById("nombre").value = "";
-                document.getElementById("email").value = "";
-                document.getElementById("telefono").value = "";
-                document.getElementById("ruc").value = "";
-
-                document.getElementById("nombre").readOnly = false;
-                document.getElementById("email").readOnly = false;
-                document.getElementById("telefono").readOnly = false;
-                document.getElementById("ruc").readOnly = false;
-            }
-        });
-    }
-
-    async function cargarVentaExistente(id) {
-        try {
-            const res = await fetch(`http://localhost:8080/backend-inge3/sale/${id}`);
-            const venta = await res.json();
-
-            // Cliente
-            if (venta.customer) {
-                $("#clienteExistente").val(venta.customer.customer_id).trigger("change");
-            }
-
-            // Tipo de Pago
-            document.getElementById(venta.payment_type === "CR" ? "credito" : "contado").checked = true;
-            toggleOpcionesCredito();
-
-            // Crédito
-            if (venta.payment_type === "CR") {
-                document.getElementById("cuotas").value = venta.installment_count;
-                if (venta.installment_days.length > 0) {
-                    document.getElementById("esIrregular").checked = true;
-                    generarCamposDias(venta.installment_count);
-
-                    // Rellenar días
-                    const inputsDias = document.querySelectorAll(".dias-cobro");
-                    venta.installment_days.forEach((cuota, index) => {
-                        inputsDias[index].value = cuota;
-                    });
-                }
-            }
-
-            // Detalle de productos
-            const tbody = document.querySelector("#tablaProductos tbody");
-            tbody.innerHTML = ""; // Limpiar la fila por defecto
-
-            for (const item of venta.sale_items) {
-                const fila = document.createElement("tr");
-
-                fila.innerHTML = `
-                <td>
-                    <select class="form-select producto-selector" required style="width: 100%">
-                        <option value="">Seleccione Producto</option>
-                    </select>
-                </td>
-                <input type="number" class="form-control sale_id" hidden="true"/>
-                <td><input type="number" class="form-control precio" required step="0.01" min="0"/></td>
-                <td><input type="number" class="form-control cantidad" required value="0" min="0"/></td>
-                <td><input type="text" class="form-control total" required readonly data-raw="0"/></td>
-                <td class="text-center">
-                    <button type="button" class="btn btn-danger fa-solid fa-trash eliminarFila"></button>
-                </td>
-            `;
-                tbody.appendChild(fila);
-            }
-
-            actualizarSelects();
-
-            // Rellenar valores luego de que Select2 termine de cargarse
-            setTimeout(() => {
-                const filas = document.querySelectorAll("#tablaProductos tbody tr");
-
-                filas.forEach((fila, index) => {
-                    const item = venta.sale_items[index];
-                    if (!item) return; // por si hay menos filas que items
-
-                    const select = fila.querySelector(".producto-selector");
-                    const precioInput = fila.querySelector(".precio");
-                    const cantidadInput = fila.querySelector(".cantidad");
-                    const saleId = fila.querySelector(".sale_id");
-
-                    // Establecer el valor del select
-                    $(select).val(item.product_id).trigger("change");
-
-                    // Establecer precios y cantidades
-                    precioInput.value = item.unit_price;
-                    cantidadInput.value = item.quantity;
-                    saleId.value = item.sale_item_id;
-
-                    // Calcular total de esa fila
-                    calcularTotalFila(fila);
-                });
-            }, 500);
-
-
-        } catch (error) {
-            console.error("Error al cargar la venta:", error);
-        }
-    }
-
-
-    document.addEventListener("DOMContentLoaded", async function () {
-        await cargarProductos();
-        await cargarClientes();
-        toggleOpcionesCredito();
-
-        document.querySelectorAll('input[name="tipoPago"]').forEach(radio =>
-            radio.addEventListener("change", toggleOpcionesCredito)
-        );
-
-        document.getElementById("cuotas").addEventListener("input", e => {
-            const cantidad = parseInt(e.target.value);
-            const esIrregular = document.getElementById("esIrregular").checked;
-
-            if (!isNaN(cantidad) && cantidad > 0 && esIrregular) {
-                generarCamposDias(cantidad);
-            } else {
-                document.getElementById("diasInputs").innerHTML = "";
-            }
-        });
-
-
-        document.getElementById("esIrregular").addEventListener("change", function () {
-            const esIrregular = this.checked;
-            const cantidad = parseInt(document.getElementById("cuotas").value);
-
-            if (esIrregular && !isNaN(cantidad) && cantidad > 0) {
-                generarCamposDias(cantidad);
-            } else {
-                document.getElementById("diasInputs").innerHTML = "";
-            }
-        });
-
-
-        const tabla = document.querySelector("#tablaProductos tbody");
-
-        tabla.addEventListener("input", e => {
-            if (e.target.classList.contains("cantidad") || e.target.classList.contains("precio")) {
-                const fila = e.target.closest("tr");
-                calcularTotalFila(fila);
-            }
-        });
-
-        tabla.addEventListener("click", e => {
-            if (e.target.classList.contains("eliminarFila")) {
-                e.target.closest("tr").remove();
-                calcularTotalGeneral();
-            }
-        });
-
-        document.getElementById("btnAgregarFila").addEventListener("click", () => {
-            const nuevaFila = document.createElement("tr");
-            nuevaFila.innerHTML = `
-        <td>
-            <select class="form-select producto-selector" style="width: 100%">
-                <option value="">Seleccione Producto</option>
-            </select>
-        </td>
-        <td><input type="number" class="form-control precio" step="0.01" min="0" /></td>
-        <td><input type="number" class="form-control cantidad" value="0" min="0" /></td>
-        <td><input type="text" class="form-control total" readonly data-raw="0" /></td>
-        <td class="text-center">
-            <button type="button" class="btn btn-danger fa-solid fa-trash eliminarFila">
-            </button>
-        </td>
-    `;
-            document.querySelector("#tablaProductos tbody").appendChild(nuevaFila);
-            actualizarSelects();
-        });
-
-        function toggleOpcionesCredito() {
-            const esCredito = document.getElementById("credito").checked;
-            const opciones = document.getElementById("opcionesCredito");
-            opciones.classList.toggle("d-none", !esCredito);
-        }
-
-        document.getElementById("formCliente").addEventListener("submit", async e => {
-            e.preventDefault();
-
-            const customer = {
-                name: document.getElementById("nombre").value.trim(),
-                email: document.getElementById("email").value.trim(),
-                phone: document.getElementById("telefono").value.trim(),
-                ci_ruc: document.getElementById("ruc").value.trim()
-            };
-
-            const tipoPago = document.querySelector('input[name="tipoPago"]:checked').value;
-            const cuotas = parseInt(document.getElementById("cuotas").value) || 0;
-            const diasInputs = document.querySelectorAll('.dias-cobro');
-
-            const diasCobro = [...diasInputs]
-                .map(input => parseInt(input.value))
-                .filter(n => !isNaN(n));
-
-            const installments = {
-                installments: cuotas,
-                installment_days: diasCobro
-            }
-
-            const productos = [];
-            document.querySelectorAll("#tablaProductos tbody tr").forEach(fila => {
-                const producto = fila.querySelector(".producto-selector").value.trim();
-                const sale_id = fila.querySelector(".sale_id");
-                const cantidad = parseInt(fila.querySelector(".cantidad").value) || 0;
-                const precio = parseFloat(fila.querySelector(".precio").value) || 0;
-                const subtotal = cantidad * precio;
-
-                if (producto && cantidad > 0 && precio >= 0) {
-                    productos.push({
-                        sale_item_id: sale_id ? parseInt(sale_id.value) : null,
-                        product_id: parseInt(producto),
-                        quantity: cantidad,
-                        unit_price: precio,
-                        sub_total: parseFloat(subtotal)
-                    });
-                }
-            });
-
-            const totalGeneral = parseFloat(document.getElementById("totalGeneral").textContent.replace(/\./g, "")) || 0;
-
-            const urlParams = new URLSearchParams(window.location.search);
-            const ventaId = urlParams.get("id");
-
-            try {
-                const payload = {
-                    customer,
-                    sale_date: new Date().toISOString(),
-                    total_amount: totalGeneral,
-                    payment_type: tipoPago === "credito" ? "CR" : "CO",
-                    installments: installments
-                };
-                if (ventaId) {
-                    payload.sale_id = ventaId;
-                    payload.sale_items_update = productos;
-                } else {
-                    payload.sale_items = productos;
-                }
-
-                const method = ventaId ? "PUT" : "POST";
-                const url = `http://localhost:8080/backend-inge3/sale`;
-
-                const res = await fetch(url, {
-                    method,
-                    headers: {"Content-Type": "application/json"},
-                    body: JSON.stringify(payload)
-                });
-
-                if (!res.ok) throw new Error("Error al guardar la venta");
-
-                alert("Venta guardada correctamente");
-                window.location.href = "listar-ventas.html";
-            } catch (error) {
-                console.error("Error:", error);
-                alert("No se pudo guardar la venta");
-            }
-        });
-        const params = new URLSearchParams(window.location.search);
-        const ventaId = params.get("id");
-
-        if (ventaId) {
-            cargarVentaExistente(ventaId);
-        }
-    });
-</script>
+<script src="ventas.js"></script>
 </body>
 </html>
